// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhotoSolo/> else only the notes render 1`] = `
<div
  className="photoSoloBox"
>
  <img
    className="photoSolo"
    src="/uploads/photo1"
  />
  <img
    className="map"
    src="Paris, Texas"
  />
  <p>
    xyz
  </p>
</div>
`;

exports[`<PhotoSolo/> if author is same as user, edit form renders 1`] = `
<div
  className="photoSoloBox"
>
  <img
    className="photoSolo"
    src="/uploads/photo1"
  />
  <img
    className="map"
    src="Paris, Texas"
  />
  <div>
    <Edit
      info="xyz"
      photo="photo1"
    />
  </div>
</div>
`;
